# DawnOfTheCircle

./: BGM.c  BGM.h  CMakeLists.txt  CommonResource.c  CommonResource.h  DawnOfTheCircle.cbp  DawnOfTheCircle.depend  DawnOfTheCircle.layout  DawnOfTheCircle.sln  DebugTools.c  DebugTools.h  FloorGround.c  FloorGround.h  Game.c  Game.h  GameCore.c  GameCore.h  GameCoreProcessInterface.h  GameObject.c  GameObject.h  GameProcessInterface.h  LightPillar.h  LivingThing.c  LivingThing.h  Map.c  Map.h  Monster.c  Monster.h  Position.c  Position.h  PowerBall.h  README.md  Role.c  Role.h  Utils.c  Utils.h  WindowArea.c  WindowArea.h  build.bat  main.c  (+1 more)
DawnOfTheCircle/: CommonResource.cpp  CommonResource.h  DawnOfTheCircle.cpp  DawnOfTheCircle.vcxproj  DawnOfTheCircle.vcxproj.filters  GameCoreProcessInterface.h  GameObject.cpp  GameObject.h  Position.cpp  Position.h  Rect.cpp  Rect.h  RenderMethods.cpp  RenderMethods.h  Size.cpp  Size.h  floor_class.cpp  floor_class.h  game_system.cpp  game_system.h  monster_class.cpp  monster_class.h  my_dialog_class.cpp  my_dialog_class.h  resource.h  role_class.cpp  role_class.h  test.cpp  test.h  window_area_class.cpp  window_area_class.h
resource/dialog/: 100.dlg  101.dlg  103.dlg  104.dlg  105.dlg  15.dlg  166.dlg  169.dlg  170.dlg  172.dlg  173.dlg  176.dlg  177.dlg  178.dlg  180.dlg  184.dlg  187.dlg  189.dlg  190.dlg  192.dlg  193.dlg  197.dlg  198.dlg  20.dlg  22.dlg  24.dlg  27.dlg  30.dlg  32.dlg  33.dlg  46.dlg  47.dlg  50.dlg  52.dlg  55.dlg  57.dlg  59.dlg  61.dlg  65.dlg  69.dlg  (+1 more)
resource/floor/: 0.floor  1.floor  10.floor  3.floor  (+11 more)
(+265 files in other folders)
